plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'maven-publish'
    id "com.modrinth.minotaur" version "2.+"
}

repositories {
    maven { url 'https://masa.dy.fi/maven' }
    mavenCentral()
}


version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "carpet:fabric-carpet:${project.carpet_minecraft_version}+${project.carpet_core_version}"

    api("org.processing:core:3.3.7")
    include('org.processing:core:3.3.7')
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.mod_version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release = 25
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    inputs.property "archivesName", project.base.archivesName

    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesBaseName}"}
    }
}

import com.modrinth.minotaur.dependencies.ModDependency

modrinth {
    token = System.getenv("MODRINTH_TOKEN")
    projectId = "Vr7HAIVL"
    versionNumber = project.mod_version
    versionType = "beta"
    uploadFile = jar
    loaders = ["fabric"]
    dependencies = [
            // carpet
            new ModDependency("TQTTVgYE", "required"),
            // discarpet
            new ModDependency("m00L1GVJ", "optional")
    ]
    changelog = rootProject.file("changelog.md").text
    syncBodyFrom = rootProject.file("README.md").text
}
